Convert to a Spring Boot tutorial, and start the course from zero
Two changes, in that order.

## Jakarta EE -> Spring Boot

The Jakarta EE module is gone and spring-service/ has been promoted to be
the project. This is a port, not a rename:

  JAX-RS resources        -> @RestController in web/
  CDI @ApplicationScoped  -> @Service + constructor injection
  jakarta.transaction     -> org.springframework...@Transactional
  EJB @Schedule timers    -> @Scheduled cron
  CDI events / @Observes  -> ApplicationEventPublisher / @EventListener
  @Produces producers     -> @Bean methods
  JAX-RS auth/CSRF filters-> HandlerInterceptors + WebConfig
  CDI interceptor         -> Spring AOP @Aspect
  JNDI mail session       -> jakarta.mail from enrollment.mail.smtp-*
  persistence/beans/web.xml -> application.yml
  Hibernate ddl-auto=update -> Flyway at startup + ddl-auto=validate
  WAR on WildFly          -> executable jar, multi-stage Dockerfile

The fieldbook's accounts, checkpoints, sticky notes and mail outbox were
ported rather than dropped, against the same PostgreSQL tables, so existing
learner progress survives. /api/students and /api/professors, which the
Spring module never had, are restored.

Verified end to end against the running application: register returns 201
with a session cookie, /me returns 200, a checkpoint records, a note is
created; /me without a cookie is an RFC 7807 401 and a POST without the
CSRF header is 403.

Jakarta EE is deliberately still discussed in chapters 01, 08, 22-24, 34,
42-44 and 48 as the platform Spring grew out of - Italian adverts do name
JBoss and WildFly. What was removed is every claim that THIS project is a
WAR on an application server.

Also updated: pom, application.yml, the test profile, docker compose (dev,
prod, coolify), Caddyfile, .gitignore, .dockerignore, launch.json, scripts,
README and docs. Two integration tests moved from a hand-rolled
EntityManagerFactory to @DataJpaTest.

One real bug found and fixed on the way: H2 w